--- a/java/res/values-rm/strings.xml
+++ b/java/res/values-rm/strings.xml
@@ -187,6 +187,28 @@
     <skip />
     <!-- no translation found for spoken_description_mode_phone_shift (5499629753962641227) -->
     <skip />
+    <!-- no translation found for announce_keyboard_hidden (8718927835531429807) -->
+    <skip />
+    <!-- no translation found for announce_keyboard_mode (4729081055438508321) -->
+    <skip />
+    <!-- no translation found for keyboard_mode_date (3137520166817128102) -->
+    <skip />
+    <!-- no translation found for keyboard_mode_date_time (339593358488851072) -->
+    <skip />
+    <!-- no translation found for keyboard_mode_email (6216248078128294262) -->
+    <skip />
+    <!-- no translation found for keyboard_mode_im (1137405089766557048) -->
+    <skip />
+    <!-- no translation found for keyboard_mode_number (7991623440699957069) -->
+    <skip />
+    <!-- no translation found for keyboard_mode_phone (6851627527401433229) -->
+    <skip />
+    <!-- no translation found for keyboard_mode_text (6479436687899701619) -->
+    <skip />
+    <!-- no translation found for keyboard_mode_time (4381856885582143277) -->
+    <skip />
+    <!-- no translation found for keyboard_mode_url (1519819835514911218) -->
+    <skip />
     <!-- no translation found for voice_input (3583258583521397548) -->
     <skip />
     <!-- no translation found for voice_input_modes_main_keyboard (3360660341121083174) -->
