--- a/java/res/values-am/strings.xml
+++ b/java/res/values-am/strings.xml
@@ -108,6 +108,17 @@
     <string name="spoken_description_mode_alpha" msgid="3528307674390156956">"የደብዳቤዎች ሁኔታ ላይ"</string>
     <string name="spoken_description_mode_phone" msgid="6520207943132026264">"የስልክ ሁኔታ ላይ"</string>
     <string name="spoken_description_mode_phone_shift" msgid="5499629753962641227">"የስልክ ምልክቶች ሁኔታ ላይ"</string>
+    <string name="announce_keyboard_hidden" msgid="8718927835531429807">"የቁልፍ ሰሌዳ ተደብቋል"</string>
+    <string name="announce_keyboard_mode" msgid="4729081055438508321">"የ<xliff:g id="MODE">%s</xliff:g> ቁልፍ ሰሌዳን በማሳየት ላይ"</string>
+    <string name="keyboard_mode_date" msgid="3137520166817128102">"ቀን"</string>
+    <string name="keyboard_mode_date_time" msgid="339593358488851072">"ቀን እና ሰዓት"</string>
+    <string name="keyboard_mode_email" msgid="6216248078128294262">"ኢሜይል"</string>
+    <string name="keyboard_mode_im" msgid="1137405089766557048">"አላላክ"</string>
+    <string name="keyboard_mode_number" msgid="7991623440699957069">"ቁጥር"</string>
+    <string name="keyboard_mode_phone" msgid="6851627527401433229">"ስልክ"</string>
+    <string name="keyboard_mode_text" msgid="6479436687899701619">"ፅሁፍ"</string>
+    <string name="keyboard_mode_time" msgid="4381856885582143277">"ጊዜ"</string>
+    <string name="keyboard_mode_url" msgid="1519819835514911218">"ዩ አር ኤል"</string>
     <string name="voice_input" msgid="3583258583521397548">"የድምፅ ግቤት ቁልፍ"</string>
     <string name="voice_input_modes_main_keyboard" msgid="3360660341121083174">"በዋናቁልፍ ሰሌዳ ላይ"</string>
     <string name="voice_input_modes_symbols_keyboard" msgid="7203213240786084067">"በምልክቶች ቁልፍ ሰሌዳ ላይ"</string>
