--- a/java/res/values-ca/strings.xml
+++ b/java/res/values-ca/strings.xml
@@ -108,6 +108,17 @@
     <string name="spoken_description_mode_alpha" msgid="3528307674390156956">"Mode de lletres"</string>
     <string name="spoken_description_mode_phone" msgid="6520207943132026264">"Mode de telèfon"</string>
     <string name="spoken_description_mode_phone_shift" msgid="5499629753962641227">"Mode de símbols de telèfon"</string>
+    <string name="announce_keyboard_hidden" msgid="8718927835531429807">"Teclat amagat"</string>
+    <string name="announce_keyboard_mode" msgid="4729081055438508321">"Es mostra el teclat <xliff:g id="MODE">%s</xliff:g>"</string>
+    <string name="keyboard_mode_date" msgid="3137520166817128102">"data"</string>
+    <string name="keyboard_mode_date_time" msgid="339593358488851072">"data i hora"</string>
+    <string name="keyboard_mode_email" msgid="6216248078128294262">"correu electrònic"</string>
+    <string name="keyboard_mode_im" msgid="1137405089766557048">"missatgeria"</string>
+    <string name="keyboard_mode_number" msgid="7991623440699957069">"número"</string>
+    <string name="keyboard_mode_phone" msgid="6851627527401433229">"telèfon"</string>
+    <string name="keyboard_mode_text" msgid="6479436687899701619">"text"</string>
+    <string name="keyboard_mode_time" msgid="4381856885582143277">"hora"</string>
+    <string name="keyboard_mode_url" msgid="1519819835514911218">"URL"</string>
     <string name="voice_input" msgid="3583258583521397548">"Tecla d\'entrada de veu"</string>
     <string name="voice_input_modes_main_keyboard" msgid="3360660341121083174">"Al teclat principal"</string>
     <string name="voice_input_modes_symbols_keyboard" msgid="7203213240786084067">"Al teclat de símbols"</string>
