--- a/java/res/values-fa/strings.xml
+++ b/java/res/values-fa/strings.xml
@@ -112,6 +112,17 @@
     <string name="spoken_description_mode_alpha" msgid="3528307674390156956">"حالت حروف"</string>
     <string name="spoken_description_mode_phone" msgid="6520207943132026264">"حالت تلفن"</string>
     <string name="spoken_description_mode_phone_shift" msgid="5499629753962641227">"حالت نمادهای تلفن"</string>
+    <string name="announce_keyboard_hidden" msgid="8718927835531429807">"صفحه کلید پنهان شد"</string>
+    <string name="announce_keyboard_mode" msgid="4729081055438508321">"نمایش صفحه کلید <xliff:g id="MODE">%s</xliff:g>"</string>
+    <string name="keyboard_mode_date" msgid="3137520166817128102">"تاریخ"</string>
+    <string name="keyboard_mode_date_time" msgid="339593358488851072">"تاریخ و زمان"</string>
+    <string name="keyboard_mode_email" msgid="6216248078128294262">"ایمیل"</string>
+    <string name="keyboard_mode_im" msgid="1137405089766557048">"پیام‌رسانی"</string>
+    <string name="keyboard_mode_number" msgid="7991623440699957069">"عدد"</string>
+    <string name="keyboard_mode_phone" msgid="6851627527401433229">"تلفن"</string>
+    <string name="keyboard_mode_text" msgid="6479436687899701619">"نوشتار"</string>
+    <string name="keyboard_mode_time" msgid="4381856885582143277">"زمان"</string>
+    <string name="keyboard_mode_url" msgid="1519819835514911218">"نشانی اینترنتی"</string>
     <string name="voice_input" msgid="3583258583521397548">"کلید ورودی صدا"</string>
     <string name="voice_input_modes_main_keyboard" msgid="3360660341121083174">"در صفحه‌کلید اصلی"</string>
     <string name="voice_input_modes_symbols_keyboard" msgid="7203213240786084067">"در صفحه‌کلید نمادها"</string>
