--- a/java/res/values-fi/strings.xml
+++ b/java/res/values-fi/strings.xml
@@ -108,6 +108,17 @@
     <string name="spoken_description_mode_alpha" msgid="3528307674390156956">"Näppäimistötila"</string>
     <string name="spoken_description_mode_phone" msgid="6520207943132026264">"Puhelintila"</string>
     <string name="spoken_description_mode_phone_shift" msgid="5499629753962641227">"Puhelinsymbolit-tila"</string>
+    <string name="announce_keyboard_hidden" msgid="8718927835531429807">"Näppäimistö on piilotettu"</string>
+    <string name="announce_keyboard_mode" msgid="4729081055438508321">"Näytetään <xliff:g id="MODE">%s</xliff:g>-näppäimistö"</string>
+    <string name="keyboard_mode_date" msgid="3137520166817128102">"päivämäärä"</string>
+    <string name="keyboard_mode_date_time" msgid="339593358488851072">"päivämäärä ja aika"</string>
+    <string name="keyboard_mode_email" msgid="6216248078128294262">"sähköposti"</string>
+    <string name="keyboard_mode_im" msgid="1137405089766557048">"viestit"</string>
+    <string name="keyboard_mode_number" msgid="7991623440699957069">"numero"</string>
+    <string name="keyboard_mode_phone" msgid="6851627527401433229">"puhelin"</string>
+    <string name="keyboard_mode_text" msgid="6479436687899701619">"teksti"</string>
+    <string name="keyboard_mode_time" msgid="4381856885582143277">"aika"</string>
+    <string name="keyboard_mode_url" msgid="1519819835514911218">"URL-osoite"</string>
     <string name="voice_input" msgid="3583258583521397548">"Ääniohjausavain"</string>
     <string name="voice_input_modes_main_keyboard" msgid="3360660341121083174">"Päänäppäimistössä"</string>
     <string name="voice_input_modes_symbols_keyboard" msgid="7203213240786084067">"Symbolinäppäimistössä"</string>
