--- a/java/res/values-hi/strings.xml
+++ b/java/res/values-hi/strings.xml
@@ -108,6 +108,17 @@
     <string name="spoken_description_mode_alpha" msgid="3528307674390156956">"अक्षर मोड"</string>
     <string name="spoken_description_mode_phone" msgid="6520207943132026264">"फ़ोन मोड"</string>
     <string name="spoken_description_mode_phone_shift" msgid="5499629753962641227">"फ़ोन प्रतीक मोड"</string>
+    <string name="announce_keyboard_hidden" msgid="8718927835531429807">"कीबोर्ड छिपा हुआ है"</string>
+    <string name="announce_keyboard_mode" msgid="4729081055438508321">"<xliff:g id="MODE">%s</xliff:g> कीबोर्ड दिखाया जा रहा है"</string>
+    <string name="keyboard_mode_date" msgid="3137520166817128102">"दिनांक"</string>
+    <string name="keyboard_mode_date_time" msgid="339593358488851072">"दिनांक और समय"</string>
+    <string name="keyboard_mode_email" msgid="6216248078128294262">"ईमेल"</string>
+    <string name="keyboard_mode_im" msgid="1137405089766557048">"संदेश सेवा"</string>
+    <string name="keyboard_mode_number" msgid="7991623440699957069">"संख्या"</string>
+    <string name="keyboard_mode_phone" msgid="6851627527401433229">"फ़ोन"</string>
+    <string name="keyboard_mode_text" msgid="6479436687899701619">"पाठ"</string>
+    <string name="keyboard_mode_time" msgid="4381856885582143277">"समय"</string>
+    <string name="keyboard_mode_url" msgid="1519819835514911218">"URL"</string>
     <string name="voice_input" msgid="3583258583521397548">"ध्‍वनि‍ इनपुट कुंजी"</string>
     <string name="voice_input_modes_main_keyboard" msgid="3360660341121083174">"मुख्‍य कीबोर्ड पर"</string>
     <string name="voice_input_modes_symbols_keyboard" msgid="7203213240786084067">"प्रतीक कीबोर्ड पर"</string>
