--- a/java/res/values-sw/strings.xml
+++ b/java/res/values-sw/strings.xml
@@ -108,6 +108,17 @@
     <string name="spoken_description_mode_alpha" msgid="3528307674390156956">"Hali ya barua"</string>
     <string name="spoken_description_mode_phone" msgid="6520207943132026264">"Hali ya simu"</string>
     <string name="spoken_description_mode_phone_shift" msgid="5499629753962641227">"Hali ya alama za simu"</string>
+    <string name="announce_keyboard_hidden" msgid="8718927835531429807">"Kibodi imefichwa"</string>
+    <string name="announce_keyboard_mode" msgid="4729081055438508321">"Inaonyesha kibodi <xliff:g id="MODE">%s</xliff:g>"</string>
+    <string name="keyboard_mode_date" msgid="3137520166817128102">"tarehe"</string>
+    <string name="keyboard_mode_date_time" msgid="339593358488851072">"tarehe na wakati"</string>
+    <string name="keyboard_mode_email" msgid="6216248078128294262">"barua pepe"</string>
+    <string name="keyboard_mode_im" msgid="1137405089766557048">"inatuma ujumbe"</string>
+    <string name="keyboard_mode_number" msgid="7991623440699957069">"nambari"</string>
+    <string name="keyboard_mode_phone" msgid="6851627527401433229">"simu"</string>
+    <string name="keyboard_mode_text" msgid="6479436687899701619">"maandishi"</string>
+    <string name="keyboard_mode_time" msgid="4381856885582143277">"wakati"</string>
+    <string name="keyboard_mode_url" msgid="1519819835514911218">"URL"</string>
     <string name="voice_input" msgid="3583258583521397548">"Kibao cha kuingizia sauti"</string>
     <string name="voice_input_modes_main_keyboard" msgid="3360660341121083174">"Kwenye kibodi kuu"</string>
     <string name="voice_input_modes_symbols_keyboard" msgid="7203213240786084067">"Kwenye kibodi ya ishara"</string>
