--- a/java/res/values-th/strings.xml
+++ b/java/res/values-th/strings.xml
@@ -108,6 +108,17 @@
     <string name="spoken_description_mode_alpha" msgid="3528307674390156956">"โหมดตัวอักษร"</string>
     <string name="spoken_description_mode_phone" msgid="6520207943132026264">"โหมดโทรศัพท์"</string>
     <string name="spoken_description_mode_phone_shift" msgid="5499629753962641227">"โหมดสัญลักษณ์โทรศัพท์"</string>
+    <string name="announce_keyboard_hidden" msgid="8718927835531429807">"ซ่อนแป้นพิมพ์แล้ว"</string>
+    <string name="announce_keyboard_mode" msgid="4729081055438508321">"กำลังแสดงแป้นพิมพ์ <xliff:g id="MODE">%s</xliff:g>"</string>
+    <string name="keyboard_mode_date" msgid="3137520166817128102">"วันที่"</string>
+    <string name="keyboard_mode_date_time" msgid="339593358488851072">"วันที่และเวลา"</string>
+    <string name="keyboard_mode_email" msgid="6216248078128294262">"อีเมล"</string>
+    <string name="keyboard_mode_im" msgid="1137405089766557048">"ข้อความ"</string>
+    <string name="keyboard_mode_number" msgid="7991623440699957069">"หมายเลข"</string>
+    <string name="keyboard_mode_phone" msgid="6851627527401433229">"โทรศัพท์"</string>
+    <string name="keyboard_mode_text" msgid="6479436687899701619">"ข้อความ"</string>
+    <string name="keyboard_mode_time" msgid="4381856885582143277">"เวลา"</string>
+    <string name="keyboard_mode_url" msgid="1519819835514911218">"URL"</string>
     <string name="voice_input" msgid="3583258583521397548">"แป้นการป้อนข้อมูลด้วยเสียง"</string>
     <string name="voice_input_modes_main_keyboard" msgid="3360660341121083174">"บนแป้นพิมพ์หลัก"</string>
     <string name="voice_input_modes_symbols_keyboard" msgid="7203213240786084067">"บนแป้นพิมพ์สัญลักษณ์"</string>
