--- a/java/res/values-uk/strings.xml
+++ b/java/res/values-uk/strings.xml
@@ -108,6 +108,17 @@
     <string name="spoken_description_mode_alpha" msgid="3528307674390156956">"Режим букв і цифр"</string>
     <string name="spoken_description_mode_phone" msgid="6520207943132026264">"Режим набору номера"</string>
     <string name="spoken_description_mode_phone_shift" msgid="5499629753962641227">"Режим набору символів"</string>
+    <string name="announce_keyboard_hidden" msgid="8718927835531429807">"Клавіатуру сховано"</string>
+    <string name="announce_keyboard_mode" msgid="4729081055438508321">"Зараз клавіатура в такому режимі: <xliff:g id="MODE">%s</xliff:g>"</string>
+    <string name="keyboard_mode_date" msgid="3137520166817128102">"дата"</string>
+    <string name="keyboard_mode_date_time" msgid="339593358488851072">"дата й час"</string>
+    <string name="keyboard_mode_email" msgid="6216248078128294262">"електронні адреси"</string>
+    <string name="keyboard_mode_im" msgid="1137405089766557048">"повідомлення"</string>
+    <string name="keyboard_mode_number" msgid="7991623440699957069">"цифри"</string>
+    <string name="keyboard_mode_phone" msgid="6851627527401433229">"номери телефонів"</string>
+    <string name="keyboard_mode_text" msgid="6479436687899701619">"текст"</string>
+    <string name="keyboard_mode_time" msgid="4381856885582143277">"час"</string>
+    <string name="keyboard_mode_url" msgid="1519819835514911218">"URL-адреси"</string>
     <string name="voice_input" msgid="3583258583521397548">"Ключ голосового вводу"</string>
     <string name="voice_input_modes_main_keyboard" msgid="3360660341121083174">"На основ. клавіатурі"</string>
     <string name="voice_input_modes_symbols_keyboard" msgid="7203213240786084067">"Символьна клавіатура"</string>
@@ -130,7 +141,7 @@
     <string name="subtype_with_layout_en_US" msgid="1362581347576714579">"Англійська (США) (<xliff:g id="LAYOUT">%s</xliff:g>)"</string>
     <string name="subtype_with_layout_es_US" msgid="6261791057007890189">"іспанська (США) (<xliff:g id="LAYOUT">%s</xliff:g>)"</string>
     <string name="subtype_no_language" msgid="141420857808801746">"Мову не вибрано"</string>
-    <string name="subtype_no_language_qwerty" msgid="2956121451616633133">"Немає мови (QWERTY)"</string>
+    <string name="subtype_no_language_qwerty" msgid="2956121451616633133">"QWERTY-клавіатура"</string>
     <string name="subtype_no_language_qwertz" msgid="1177848172397202890">"Без мови (QWERTZ)"</string>
     <string name="subtype_no_language_azerty" msgid="8721460968141187394">"Без мови (AZERTY)"</string>
     <string name="subtype_no_language_dvorak" msgid="3122976737669823935">"Без мови (Dvorak)"</string>
