--- a/java/res/values-zu/strings.xml
+++ b/java/res/values-zu/strings.xml
@@ -108,6 +108,17 @@
     <string name="spoken_description_mode_alpha" msgid="3528307674390156956">"Imodi yezinhlamvu"</string>
     <string name="spoken_description_mode_phone" msgid="6520207943132026264">"Imodi yefoni"</string>
     <string name="spoken_description_mode_phone_shift" msgid="5499629753962641227">"Imodi yezimpawu zefoni"</string>
+    <string name="announce_keyboard_hidden" msgid="8718927835531429807">"Ikhibhodi ifihliwe"</string>
+    <string name="announce_keyboard_mode" msgid="4729081055438508321">"Kuboniswa ikhibhodi engu-<xliff:g id="MODE">%s</xliff:g>"</string>
+    <string name="keyboard_mode_date" msgid="3137520166817128102">"idethi"</string>
+    <string name="keyboard_mode_date_time" msgid="339593358488851072">"idethi nesikhathi"</string>
+    <string name="keyboard_mode_email" msgid="6216248078128294262">"i-imeyili"</string>
+    <string name="keyboard_mode_im" msgid="1137405089766557048">"imilayezo"</string>
+    <string name="keyboard_mode_number" msgid="7991623440699957069">"inombolo"</string>
+    <string name="keyboard_mode_phone" msgid="6851627527401433229">"ifoni"</string>
+    <string name="keyboard_mode_text" msgid="6479436687899701619">"umbhalo"</string>
+    <string name="keyboard_mode_time" msgid="4381856885582143277">"isikhathi"</string>
+    <string name="keyboard_mode_url" msgid="1519819835514911218">"I-URL"</string>
     <string name="voice_input" msgid="3583258583521397548">"Inkinobho yokufaka izwi"</string>
     <string name="voice_input_modes_main_keyboard" msgid="3360660341121083174">"Kwikhibhodi eyisisekelo"</string>
     <string name="voice_input_modes_symbols_keyboard" msgid="7203213240786084067">"Ikhibhodi yezimpawu"</string>
