--- a/java/res/values-es-rUS/strings.xml
+++ b/java/res/values-es-rUS/strings.xml
@@ -113,7 +113,7 @@
     <string name="keyboard_mode_date" msgid="3137520166817128102">"fecha"</string>
     <string name="keyboard_mode_date_time" msgid="339593358488851072">"fecha y hora"</string>
     <string name="keyboard_mode_email" msgid="6216248078128294262">"correo"</string>
-    <string name="keyboard_mode_im" msgid="1137405089766557048">"Centro de Mensajes"</string>
+    <string name="keyboard_mode_im" msgid="1137405089766557048">"mensaje de texto"</string>
     <string name="keyboard_mode_number" msgid="7991623440699957069">"número"</string>
     <string name="keyboard_mode_phone" msgid="6851627527401433229">"teléfono"</string>
     <string name="keyboard_mode_text" msgid="6479436687899701619">"texto"</string>
