--- a/java/res/values-sl/strings.xml
+++ b/java/res/values-sl/strings.xml
@@ -113,9 +113,9 @@
     <string name="keyboard_mode_date" msgid="3137520166817128102">"datum"</string>
     <string name="keyboard_mode_date_time" msgid="339593358488851072">"datum in ura"</string>
     <string name="keyboard_mode_email" msgid="6216248078128294262">"e-pošta"</string>
-    <string name="keyboard_mode_im" msgid="1137405089766557048">"sporočila SMS"</string>
+    <string name="keyboard_mode_im" msgid="1137405089766557048">"sporočila"</string>
     <string name="keyboard_mode_number" msgid="7991623440699957069">"števila"</string>
-    <string name="keyboard_mode_phone" msgid="6851627527401433229">"telefonske številke"</string>
+    <string name="keyboard_mode_phone" msgid="6851627527401433229">"telefon"</string>
     <string name="keyboard_mode_text" msgid="6479436687899701619">"besedilo"</string>
     <string name="keyboard_mode_time" msgid="4381856885582143277">"ura"</string>
     <string name="keyboard_mode_url" msgid="1519819835514911218">"URL"</string>
