--- a/java/res/values-uk/strings.xml
+++ b/java/res/values-uk/strings.xml
@@ -109,7 +109,7 @@
     <string name="spoken_description_mode_phone" msgid="6520207943132026264">"Режим набору номера"</string>
     <string name="spoken_description_mode_phone_shift" msgid="5499629753962641227">"Режим набору символів"</string>
     <string name="announce_keyboard_hidden" msgid="8718927835531429807">"Клавіатуру сховано"</string>
-    <string name="announce_keyboard_mode" msgid="4729081055438508321">"Зараз клавіатура в такому режимі: <xliff:g id="MODE">%s</xliff:g>"</string>
+    <string name="announce_keyboard_mode" msgid="4729081055438508321">"Режим клавіатури: <xliff:g id="MODE">%s</xliff:g>"</string>
     <string name="keyboard_mode_date" msgid="3137520166817128102">"дата"</string>
     <string name="keyboard_mode_date_time" msgid="339593358488851072">"дата й час"</string>
     <string name="keyboard_mode_email" msgid="6216248078128294262">"електронні адреси"</string>
